# sdk-demo

./: .env.example  .gitignore  Dockerfile  Dockerfile.app  README.md  docker-compose.all.yml  pyproject.toml
demo/: app.py  build.py  connector.py  data_server.py  main.py  pipeline.py
demo/connector-configs/: consumer.properties  provider.properties
demo/static/: index.html
tests/: test_pipeline.py
