[project]
name = "cir4fun-sdk-demo"
version = "0.1.0"
description = "Demo for Digital Product Passport (DPP) data space interoperability"
readme = "README.md"
requires-python = ">=3.13"
# edc_client is installed manually (generated EDC OpenAPI client, not on PyPI) — not listed here
dependencies = [
    "dpp-sdk>=0.2.1",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demo"]

[tool.ruff]
line-length = 100
